# VecTHOR

./: LICENSE  README.md  VERSION
retarget/: CMakeConfig.txt  CMakeLists.txt  Doxyfile  Makefile
retarget/data/: compressed.suffix  dyncompressed.infix  dyncompressed.preload  dynmergecompressed.prefix  dynmergecompressed.suffix  legacy.prefix  legacy.suffix  mergecompressed.prefix
retarget/lib/: README.md
retarget/src/: .clang-format  CMakeLists.txt  Compressor.C  Compressor.h  CompressorCore.C  CompressorCore.h  Config.C  Config.h  Decompressor.C  Decompressor.h  DynDecompressor.C  DynDecompressor.h  Emitter.C  Emitter.h  FormalDecompressor.C  FormalDecompressor.h  P2SBuffer.C  P2SBuffer.h  Plotter.C  Plotter.h  Stats.C  Stats.h  TDRGen.C  TDRGen.h  TDRReader.C  TDRReader.h  TypeDefs.h  Utils.C  Utils.h  Validator.C  Validator.h  VecTHOR.C  VecTHOR.h  reformat.sh
retarget/src/stil/: README.md
retarget/test/: CMakeLists.txt  eval_simulation_result.sh.in  extract_PAT_data.sh  extract_PI_data.sh.in  get_binary_data_FV.sh.in  vsim_wrapper.sh
retarget/test/struct_bufferdynmergecompressed/: CMakeLists.txt  default.conf  run_bufferdyncompressed_resim.do.in
retarget/test/struct_compressed/: CMakeLists.txt  default.conf
retarget/test/struct_dynmergecompressed/: CMakeLists.txt  default.conf  run_dyncompressed_resim.do.in  run_legacy_resim.do.in
retarget/test/struct_mergecompressed/: CMakeLists.txt  default.conf  run_compressed_resim.do.in
retarget/test/struct_partcompressed/: CMakeLists.txt  default.conf  run_legacy_resim.do.in  run_partcompressed_resim.do.in
retarget/test/struct_satcompressed/: CMakeLists.txt  default.conf
retarget/test/struct_satppcompressed/: CMakeLists.txt  default.conf
